# n2w-vscode-starter

./: CMakeLists.txt  README.md  package.json  tsconfig.json  webpack.config.js
cmake/: cmake.js
cmake/Modules/: NodeModule.cmake
src/common/: messages.ts
src/extension/: Server.ts  extension.ts
src/native/: CMakeLists.txt  native.cpp  native.ts
src/view/: App.tsx  ServerPort.ts  index.tsx
